--- a/_posts/2024-01-31-poop.md
+++ b/_posts/2024-01-31-poop.md
@@ -10,6 +10,40 @@ output:
   github_document: default
 ---
 
+### First tabs
+
+{% tabs log %}
+
+{% tab log php %}
+```php
+var_dump('hello');
+```
+{% endtab %}
+
+{% tab log js %}
+```javascript
+console.log('hello');
+```
+{% endtab %}
+
+{% tab log ruby %}
+```javascript
+pputs 'hello'
+```
+{% endtab %}
+
+{% endtabs %}
+
+
+
+
+
+
+
+
+
+
+
 ## GitHub Documents
 
 This is an R Markdown format used for publishing markdown documents to
@@ -40,3 +74,5 @@ You can also embed plots, for example:
 
 Note that the `echo = FALSE` parameter was added to the code chunk to
 prevent printing of the R code that generated the plot.
+
+
